discussion/kv_engine/125164/125164_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38326: Change MagmaRequest getKey & getKeyLen function names

These are getting confused with IORequest equivalents.

Change-Id: Ife94dd2425a8587321b78ecd7d5e6663a89daf31

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-04-07 19:03:11.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-07 20:10:06.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1604/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29: error: expected class name [clang-diagnostic-error]
class MagmaRequest : public IORequest {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:45:16: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return key.size();
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:49:46: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return reinterpret_cast<const char*>(key.data());
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1604/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29:
error: expected class name [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1604/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10870/ : FAILURE

Failure of a CTest test [2020-04-07T19:50:37.638Z] 329/382 Test #330: memcached_testapp.ep.MaxConnectionTest ...................................................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10870/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3010/ : FAILURE

Failure of a CTest test [2020-04-07T19:30:06.078Z] 161/388 Test #143: ep-engine_ep_unit_tests.PersistentAndEphemeral/StreamTest ................................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3010/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27385/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/123/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23427/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3016/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3073/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2066/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
